<resources>
    <string name="app_name">GroceryList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_text">Welcome to Wegmans!</string>
    <string name="enter_name">Enter your name</string>
    <string name="start_list_button">Start List!</string>
    <string name="welcome_name_text">Welcome PERSONS NAME HERE!</string>
    <string name="add_item_text">Add Item!</string>
    <string name="grocery_item_1"></string>
    <string name="grocery_item_2"></string>
    <string name="grocery_item_3"></string>
    <string name="grocery_item_4"></string>
    <string name="grocery_item_5"></string>
    <string name="almond_butter_button">ALMOND BUTTER</string>
    <string name="oatmeal_button">OATMEAL</string>
    <string name="dark_chocolate_button">DARK CHOCOLATE</string>
    <string name="avocado_button">AVOCADO</string>
    <string name="kale_button">KALE</string>
    <string name="blueberries_button">BLUEBERRIES</string>
    <string name="kombucha_button">KOMBUCHA</string>
    <string name="apple_cider_button">APPLE CIDER</string>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>