<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    android:padding="10dp"
    tools:context=".GroceryListFragment">

    <TextView
        android:id="@+id/welcome_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:gravity="center|center_vertical"
        android:text="@string/welcome_name_text"
        android:textAlignment="center"
        android:textColor="@color/main_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/main_text"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/add_item_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_name" />

    <TextView
        android:id="@+id/grocery_item_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/grocery_item_1"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_button" />

    <TextView
        android:id="@+id/grocery_item_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/grocery_item_2"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grocery_item_1" />

    <TextView
        android:id="@+id/grocery_item_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/grocery_item_3"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grocery_item_2" />

    <TextView
        android:id="@+id/grocery_item_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/grocery_item_4"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grocery_item_3" />

    <TextView
        android:id="@+id/grocery_item_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/grocery_item_5"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grocery_item_4" />

</androidx.constraintlayout.widget.ConstraintLayout>

