<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_choose_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    android:padding="10dp"
    tools:context=".ChooseItemFragment">

    <Button
        android:id="@+id/almond_butter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_text"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/almond_butter_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/oatmeal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_text"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/oatmeal_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/almond_butter_button" />

    <Button
        android:id="@+id/dark_chocolate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_text"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/dark_chocolate_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oatmeal_button" />

    <Button
        android:id="@+id/avocado_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_text"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/avocado_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark_chocolate_button" />

    <Button
        android:id="@+id/kale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_text"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/kale_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avocado_button" />

    <Button
        android:id="@+id/blueberries_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_text"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/blueberries_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kale_button" />

    <Button
        android:id="@+id/kombucha_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_text"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/kombucha_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blueberries_button" />

    <Button
        android:id="@+id/apple_cider_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_text"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/apple_cider_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kombucha_button" />
</androidx.constraintlayout.widget.ConstraintLayout>
