<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_send_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    tools:context=".HomeFragment"
    android:padding="10dp">

    <TextView
        android:id="@+id/welcome_wegmans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/main_text"
        android:textSize="67sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="text"

        android:textColor="@color/main_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_wegmans" />

    <Button
        android:id="@+id/startListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/main_text"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/start_list_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

</androidx.constraintlayout.widget.ConstraintLayout>
